Fixed spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -127,12 +127,15 @@ section.main {
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 section.main aside {
     flex-grow: 1;
-    width: 250px;
+    width: 450px;
+    max-width: 450px;
     text-align: center;
+    padding: 0px 20px;
 }
 
 
